config-root/namespaces/jx-staging/footest/footest-footest-deploy.yaml
# Source: footest/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: footest-footest
  labels:
    draft: draft-app
    chart: "footest-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: footest-footest
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: footest-footest
    spec:
      serviceAccountName: footest-footest
      containers:
        - name: footest
          image: "gcr.io/unity-cs-recorderjmeter-test/footest:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
