config-root/namespaces/jx-staging/footest/footest-ingress.yaml
# Source: footest/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: footest
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: footest
              servicePort: 80
      host: footest-jx-staging.34.121.209.58.nip.io
